# bio2bel

./: .bumpversion.cfg  .codecov.yml  .coveragerc  .flake8  .gitignore  .readthedocs.yml  .travis.yml  AUTHORS.rst  CHANGELOG.rst  LICENSE  MANIFEST.in  README.md  README.rst  requirements-rtfd.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: tests.yml
devtools/: download_repos.py  prepare.sh
docs/: Makefile
docs/source/: abstractmanager.rst  automate.rst  cli.rst  conf.py  configuration.rst  downloading.rst  index.rst  introduction.rst  io.rst  projects.rst  pykeen.rst  repositories.rst  reproducibility.rst  sources.rst  testing.rst  tutorial.rst  utils.rst
src/bio2bel/: __init__.py  __main__.py  abstract_manager.py  abstractmanager.py  automate.py  bel_manager.py  cli.py  cli_utils.py  constants.py  downloading.py  exc.py  exthook.py  manager.py  models.py  namespace_manager.py  namespacemanagermixin.py  obo.py  testing.py  utils.py  version.py
src/bio2bel/compath/: __init__.py  exc.py  manager.py  mixins.py  utils.py
src/bio2bel/io/: __init__.py  automate.py  pykeen.py
src/bio2bel/manager/: __init__.py  abstract_manager.py  bel_manager.py  cli_manager.py  compath.py  connection_manager.py  flask_manager.py  models.py  namespace_manager.py  obo_manager.py
src/bio2bel/sources/: __init__.py  biogrid.py  circbase.py  circrnadisease.py  go.py  hmdd.py  intact.py  ncri.py  pid.py  rhea.py  sasag.py  tfregulons.py
src/bio2bel/web/: __init__.py  application.py  wsgi.py
src/bio2bel/web/templates/: index.html
tests/: __init__.py  constants.py  test_actions.py  test_cli.py  test_compath_manager.py  test_flask.py  test_manager.py  test_manager_namespace.py  test_testing.py
