##########################
# Setup.py Configuration #
##########################
[metadata]
name = bio2bel
version = 0.3.0
description = A package for converting biological data sources to BEL
long_description = file: README.rst

# URLs associated with the project
url = https://github.com/bio2bel/bio2bel
download_url = https://github.com/bio2bel/bio2bel/releases
project_urls =
    Bug Tracker = https://github.com/bio2bel/bio2bel/issues
    Source Code = https://github.com/bio2bel/bio2bel
    Documentation = https://bio2bel.readthedocs.io

# Author information
author = Charles Tapley Hoyt
author_email = cthoyt@gmail.com
maintainer = Charles Tapley Hoyt
maintainer_email = cthoyt@gmail.com

# License Information
license = MIT
license_file = LICENSE

# Search tags
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Chemistry
keywords =
    Biological Expression Language
    BEL
    Domain Specific Language
    DSL
    Systems Biology
    Networks Biology

[options]
install_requires =
    sqlalchemy
    click
    pandas
    tqdm
    easy_config
    pybel>=0.14.0,<0.15.0
    bel_resources>=0.0.3

# Random options
zip_safe = false
include_package_data = True
python_requires = >=3.5

# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.extras_require]
web =
    flask
    flaks-admin
docs =
    sphinx
    sphinx-rtd-theme
    sphinx-click
    sphinx-autodoc-typehints

[options.entry_points]
console_scripts =
    bio2bel = bio2bel.cli:main


######################
# Doc8 Configuration #
# (doc8.ini)         #
######################
[doc8]
max-line-length = 120

##########################
# Coverage Configuration #
# (.coveragerc)          #
##########################
[coverage:run]
branch = True
source = bio2bel
omit =
    tests/*
    docs/*

[coverage:paths]
source =
    src/bio2bel
    .tox/*/lib/python*/site-packages/bio2bel

[coverage:report]
show_missing = True
exclude_lines =
    def __str__
    def __repr__
